overflow fix

--- a/wp-content/themes/civi-child/style.css
+++ b/wp-content/themes/civi-child/style.css
@@ -516,6 +516,9 @@ input#jobs_filter_search {
   padding: 15px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; }
 
+.candidate-header .candidate-status-inner {
+  display: flex; }
+
 /* Home  */
 /* Home Tabs */
 .howitworks_tab .elementor-tabs-wrapper {
